--- a/public/style/css/main.css
+++ b/public/style/css/main.css
@@ -8,6 +8,7 @@
 body {
   line-height: 1.5;
   position: relative;
+  height: 100%;
 }
 
 html {
@@ -55,10 +56,17 @@ button {
 
 .header {
   min-height: 100vh;
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../asset/header-banner.jpg") center/cover no-repeat;
   display: flex;
   flex-direction: column;
   justify-content: stretch;
+}
+.header video {
+  object-fit: cover;
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 .header .navbar {
   display: flex;
