--- a/public/style/css/main.css
+++ b/public/style/css/main.css
@@ -464,65 +464,64 @@ button {
   color: #534a4b;
 }
 
-.reviews {
+.shower {
   padding: 5rem 0;
-}
-.reviews .reviews-wrapper {
-  position: relative;
-  height: 40rem;
-}
-.reviews__item {
-  text-align: center;
-  padding: 3rem;
-  display: none;
-}
-.reviews__item__title {
-  font-size: 2.8rem;
-  text-transform: uppercase;
-  font-weight: 500;
-}
-.reviews__item .text {
-  font-size: 1.6rem;
-  color: #534a4b;
-  margin: 2rem 0;
-  padding: 0 2.5rem;
-}
-@media only screen and (min-width: 768px) {
-  .reviews__item .text {
-    width: 60%;
-    margin-left: auto;
-    margin-right: auto;
-  }
-}
-@media only screen and (min-width: 992px) {
-  .reviews__item .text {
-    font-size: 2rem;
-  }
-}
-.reviews__item__name {
   font-size: 1.8rem;
-  font-weight: 300;
-  letter-spacing: 0.4rem;
 }
-@media only screen and (min-width: 992px) {
-  .reviews__item__name {
-    font-size: 2.4rem;
-  }
+.shower p, .shower h3, .shower h5, .shower img {
+  width: 90vw;
+  margin: 0 auto;
+  padding-top: 1rem;
 }
-.reviews .activeSlide {
-  display: block;
+.shower .article--shower {
+  margin-top: 3rem;
 }
 
 .newsletter {
   height: 60vh;
-  background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("../../asset/images2.jpg") center/cover no-repeat fixed;
+  background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url("../../asset/images2.jpg") center/cover no-repeat fixed;
   text-align: center;
   padding: 5rem 0;
+}
+.newsletter .navbar__extra-content {
+  flex: 1 0 30%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 1rem 0;
+}
+@media only screen and (min-width: 992px) {
+  .newsletter .navbar__extra-content {
+    flex: 1 0 30%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 1rem 0;
+  }
+}
+.newsletter .navbar__extra-content .nav-icons {
+  margin: 0 auto;
+  display: flex;
+}
+@media screen and (min-width: 500px) {
+  .newsletter .navbar__extra-content .nav-icons {
+    display: flex;
+  }
+}
+.newsletter .navbar__extra-content .nav-icons span {
+  color: blue;
+  font-size: 4rem;
+  padding: 0.5rem 1.5rem;
+  cursor: pointer;
+  transition: all 0.5s ease-in-out;
+}
+.newsletter .navbar__extra-content .nav-icons span:hover {
+  opacity: 0.8;
 }
 .newsletter__title {
   font-size: 2rem;
   text-transform: uppercase;
-  color: #ffffff;
+  color: black;
   margin-bottom: 2.2rem;
 }
 @media only screen and (min-width: 768px) {
