--- a/public/style/scss/layout/_newsletter.scss
+++ b/public/style/scss/layout/_newsletter.scss
@@ -1,19 +1,61 @@
 .newsletter {
     height: 60vh;
-    background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url('../../asset/images2.jpg') center/cover no-repeat fixed;
+    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url('../../asset/images2.jpg') center/cover no-repeat fixed;
     text-align: center;
     padding: 5rem 0;
+    // navbar__extra-content
+    .navbar__extra-content {
+        flex: 1 0 30%;
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        padding: 1rem 0;
+
+        // responsive
+        @include media-medium-2 {
+            flex: 1 0 30%;
+            display: flex;
+            justify-content: flex-end;
+            align-items: center;
+            padding: 1rem 0;
+        }
+
+        .nav-icons {
+            margin: 0 auto;
+            display: flex;
+
+            // responsive
+            @include media-sm {
+                display: flex;
+            }
+
+            span {
+                color: blue;
+                font-size: 4rem;
+                padding: 0.5rem 1.5rem;
+                cursor: pointer;
+                transition: $transition;
+
+                &:hover {
+                    opacity: 0.8;
+                }
+            }
+        }
+    }
+
     //  title
     &__title {
         font-size: 2rem;
         text-transform: uppercase;
-        color: $white-color;
+        color:black;
         margin-bottom: 2.2rem;
+
         // responsive
         @include media-medium-1 {
             font-size: 2.8rem;
         }
     }
+
     // form control
     &__form-control {
         font-size: 1.6rem;
@@ -24,27 +66,33 @@
         font-weight: 300;
         width: 80%;
         margin: 1.6rem 0;
+
         // responsive
         @include media-medium-1 {
             width: 40rem;
         }
+
         &::placeholder {
             color: $brown-color;
         }
+
         &:focus {
             outline: none;
         }
     }
+
     .button__trans {
         width: 80%;
         margin: 1.6rem 0;
         background: $brown-color;
         border-color: $emperor-color;
         font-size: 1.6rem;
+
         &:hover {
             background: $white-color;
             color: $emperor-color;
         }
+
         // responsive
         @include media-medium-1 {
             width: auto;
