--- a/public/style/scss/layout/reviews.scss
+++ b/public/style/scss/layout/reviews.scss
@@ -1,47 +1,14 @@
-.reviews {
+.shower {
+    p,h3,h5,img {
+        width: 90vw;
+        margin: 0 auto;
+        padding-top:1rem;
+    }
+
     padding: 5rem 0;
-    .reviews-wrapper {
-        position: relative;
-        height: 40rem;
-    }
-    // single item
-    &__item {
-        text-align: center;
-        padding: 3rem;
-        display: none;
-        // title
-        &__title {
-            font-size: 2.8rem;
-            text-transform: uppercase;
-            font-weight: 500;
-        }
-        //  text
-        .text {
-            font-size: 1.6rem;
-            color: $emperor-color;
-            margin: 2rem 0;
-            padding: 0 2.5rem;
-            //  responsive
-            @include media-medium-1 {
-                width: 60%;
-                margin-left: auto;
-                margin-right: auto;
-            }
-            @include media-medium-2 {
-                font-size: 2rem;
-            }
-        }
-        // name
-        &__name {
-            font-size: 1.8rem;
-            font-weight: 300;
-            letter-spacing: 0.4rem;
-            @include media-medium-2 {
-                font-size: 2.4rem;
-            }
-        }
-    }
-    .activeSlide {
-        display: block;
+    font-size:1.8rem;
+
+    .article--shower {
+        margin-top: 3rem;
     }
 }
